Se agrego funcionalidad con peticiones ajax a un api rest

--- a/proximos.html
+++ b/proximos.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-    
     <title>CineBictia</title>
 </head>
 <body>
@@ -26,7 +25,7 @@
                     <a href="cartelera.html">Cartelera</a>
                     <a href="proximos.html">Proximos estrenos</a>
                     <a href="#">Contactenos</a>
-                    <a href="login.html">Inicia sesión</a>
+                    <a href="#">Inicia sesión</a>
                     <a href="#">Sobre nosotros</a>
                 </div>
             </div>
@@ -37,49 +36,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="titulo">Peliculas en cartelera</h2>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-sm-6 col-md-3 pelicula">
-                        <img class="img-fluid" src="img/pelicula5.jpg" alt="imagen de pelicula en cartelera">
-                        <a class="horarios" href="#">Ver Horarios</a>
-                    </div>
-                    <div class="col-sm-6 col-md-3 pelicula">
-                        <img class="img-fluid" src="img/pelicula6.jpg" alt="imagen de pelicula en cartelera">
-                        <a class="horarios" href="#">Ver Horarios</a>
-                    </div>
-                    <div class="col-sm-6 col-md-3 pelicula">
-                        <img class="img-fluid" src="img/pelicula7.jpg" alt="imagen de pelicula en cartelera">
-                        <a class="horarios" href="#">Ver Horarios</a>
-                    </div>
-                    <div class="col-sm-6 col-md-3 pelicula">
-                        <img class="img-fluid" src="img/badboys.jpg" alt="imagen de pelicula en cartelera">
-                        <a class="horarios" href="#">Ver Horarios</a>
-                    </div>    
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
                         <h2 class="titulo">Proximos estrenos</h2>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-6 col-md-3 pelicula">
-                        <img class="img-fluid" src="img/pelicula10.jpg" alt="imagen de pelicula en cartelera">
-                        <a class="horarios" href="#">Ver Horarios</a>
-                    </div>
-                    <div class="col-sm-6 col-md-3 pelicula">
-                        <img class="img-fluid" src="img/pelicula8.jpg" alt="imagen de pelicula en cartelera">
-                        <a class="horarios" href="#">Ver Horarios</a>
-                    </div>
-                    <div class="col-sm-6 col-md-3 pelicula">
-                        <img class="img-fluid" src="img/pelicula9.jpg" alt="imagen de pelicula en cartelera">
-                        <a class="horarios" href="#">Ver Horarios</a>
-                    </div>
-                    <div class="col-sm-6 col-md-3 pelicula">
-                        <img class="img-fluid" src="img/pelicula11.jpg" alt="imagen de pelicula en cartelera">
-                        <a class="horarios" href="#">Ver Horarios</a>
-                    </div>    
+                <div class="row" id="peliculas_proximos">
+                   
                 </div>
             </div>
         </section> 
@@ -108,12 +69,11 @@
         </div>
     </footer>
 
+
+
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/funcionalidad.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
-
-
-<!-- paola.cuadros@bit.institute -->
