--- a/cartelera.html
+++ b/cartelera.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <script src="https://kit.fontawesome.com/6ca4de6002.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilos.css">
     <title>CineBictia</title>
 </head>
 <body>
@@ -16,7 +15,7 @@
         <div class="container">
             <div class="row contenedor_menu">
                 <div class="sitio col-12 col-md-3">
-                    <a href="#">
+                    <a href="./index.html">
                         <h1>
                             CineBictia
                         </h1>
@@ -24,7 +23,7 @@
                 </div>
                 <div class="menu col-12 col-md-9">
                     <a href="#">Cartelera</a>
-                    <a href="#">Proximos estrenos</a>
+                    <a href="proximos.html">Proximos estrenos</a>
                     <a href="#">Contactenos</a>
                     <a href="#">Inicia sesión</a>
                     <a href="#">Sobre nosotros</a>
@@ -40,23 +39,8 @@
                         <h2 class="titulo">Peliculas en cartelera</h2>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-6 col-md-3 pelicula">
-                        <img class="img-fluid" src="img/pelicula5.jpg" alt="imagen de pelicula en cartelera">
-                        <a class="horarios" href="#">Ver Horarios</a>
-                    </div>
-                    <div class="col-sm-6 col-md-3 pelicula">
-                        <img class="img-fluid" src="img/pelicula6.jpg" alt="imagen de pelicula en cartelera">
-                        <a class="horarios" href="#">Ver Horarios</a>
-                    </div>
-                    <div class="col-sm-6 col-md-3 pelicula">
-                        <img class="img-fluid" src="img/pelicula7.jpg" alt="imagen de pelicula en cartelera">
-                        <a class="horarios" href="#">Ver Horarios</a>
-                    </div>
-                    <div class="col-sm-6 col-md-3 pelicula">
-                        <img class="img-fluid" src="img/badboys.jpg" alt="imagen de pelicula en cartelera">
-                        <a class="horarios" href="#">Ver Horarios</a>
-                    </div>    
+                <div class="row" id="peliculas_cartelera">
+                   
                 </div>
             </div>
         </section> 
@@ -87,9 +71,10 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script src="js/jquery-3.4.1.min.js"></script>
+    <script src="js/funcionalidad.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
 
