Se agregó funcionalidad de login y localStorage como tambien slider del index

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    
     <title>CineBictia</title>
 </head>
 <body>
@@ -35,12 +36,29 @@
         <section class="cartelera"> 
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
-                        <h2 class="titulo">Proximos estrenos</h2>
-                    </div>
-                </div>
-                <div class="row" id="peliculas_proximos">
-                   
+                    <div class=" col-md-12 jumbotron jumbotron-fluid">
+                        <div class="container">
+                          <h2 class="text-center">QUÍENES SOMOS</h2>
+                          <h1 class="display-4 text-center">LÍDERES DEL CINE DIGITAL</h1>
+                          <p class="lead">Cinemark Holdings, Inc. es una cadena de cines con operaciones en Estados Unidos, Argentina, Brasil, Bolivia, Chile, Colombia, Costa Rica, Curaçao, Ecuador, Perú, Paraguay, Panamá, Guatemala, Honduras, Nicaragua y El Salvador. Su sede corporativa está localizada en Plano, Texas, Estados Unidos.</p>
+
+                          <p>
+                            SOMOS N°1 EN ASISTENCIA EN AMÉRICA LATINA
+                          </p>
+                          <ul class="ml-3">
+                              <li>Contamos con 201 complementos de cine y 1.435 pantallas</li>
+                              <li>Somos el circuito de cines más diverso con presencia en 15 países de America Latina</li>
+                              <li>Tenemos presencia en 14 de las 20 áreas metropolitanas más importante de sudamerica</li>
+                              <li>Abrimos nuestro primer cine en medellin en 1999</li>
+                              <li>En Colombia, actualmente contamos con 35 teatros y 203 pantallas</li>
+                          </ul>
+                          <p>
+                            En Colombia, todos nuestros Multiplex están dotados con tecnología 100% digital. Cinemark ha venido innovando con nuevas experiencias y formatos, actualmente cuenta con tecnología XD, sillas con movimiento D-BOX, Sala Premier con un exclusivo servicio y gran variedad de comidas y bebidas tipo gourmet, lo que permite brindar una experiencia única y diferente.
+
+                            LA CALIDAD ES LO PRIMERO Y ES POR ESO QUE CONTAMOS CON FORMATOS ÚNICOS Y TECNOLOGÍA DE PRIMERA DENTRO DEL RUBRO DE PROYECCIÓN:
+                          </p>
+                        </div>
+                      </div>
                 </div>
             </div>
         </section> 
@@ -70,6 +88,7 @@
     </footer>
 
     <!-- Modal -->
+  
   <div class="modal" id="myModal">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -90,19 +109,14 @@
             <input class="form-control" type="password" name="password" id="password">
         </div>
         </div>
-  
         <!-- Modal footer -->
         <div class="modal-footer">
             <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
           <button type="button" class="btn btn-success" data-dismiss="modal" id="boton-ingresar">Ingresar</button>
-        </div>
-
-  
+        </div>  
       </div>
     </div>
   </div>
-
-
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/funcionalidad.js"></script>
@@ -110,3 +124,6 @@
     <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
+<!-- paola.cuadros@bit.institute -->
