--- a/contactenos.html
+++ b/contactenos.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    
     <title>CineBictia</title>
 </head>
 <body>
@@ -35,12 +36,19 @@
         <section class="cartelera"> 
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
-                        <h2 class="titulo">Proximos estrenos</h2>
+                    <h2>Estamos ubicados aquí</h2>
+                    <iframe class="mt-3" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7953.353105117883!2d-74.12860511831096!3d4.651652293745098!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3f9c75cb55d0e1%3A0x7784f1e06b2d2d1e!2sCinemark%20Multiplaza!5e0!3m2!1ses-419!2sco!4v1580914505159!5m2!1ses-419!2sco" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                 </div>
+                <div class="row">
+                    <div class="col-md-8">
+                        <h4>Contactenos</h4>
+                        <p class="calle">Mutliplaza La Felicidad, Av. Boyacá, Bogotá</p>
+                        <p class="correo">cinemark[arroba]correo.com</p>
+                        <p class="telefono">(1) 2266555</p>
                     </div>
-                </div>
-                <div class="row" id="peliculas_proximos">
-                   
+                    <div class="col-md-4">
+                        <h2>cinemar.com.co</h2>
+                    </div>
                 </div>
             </div>
         </section> 
@@ -70,6 +78,7 @@
     </footer>
 
     <!-- Modal -->
+  
   <div class="modal" id="myModal">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -102,11 +111,12 @@
     </div>
   </div>
 
-
-
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/funcionalidad.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
+
+
+<!-- paola.cuadros@bit.institute -->
