--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <div class="menu col-12 col-md-9">
                     <a href="cartelera.html">Cartelera</a>
                     <a href="proximos.html">Proximos estrenos</a>
-                    <a href="#">Contactenos</a>
-                    <a href="login.html">Inicia sesión</a>
-                    <a href="#">Sobre nosotros</a>
+                    <a href="contactenos.html">Contactenos</a>
+                    <a id="login" data-toggle="modal" data-target="#myModal">Inicia sesión</a>
+                    <a href="about.html">Sobre nosotros</a>
                 </div>
             </div>
         </div>
@@ -36,6 +36,27 @@
         <section class="cartelera"> 
             <div class="container">
                 <div class="row">
+                    <div id="carouselExampleControls" class="carousel slide col-md-12 mt-3" data-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="img/star.jpg" class="d-block img-fluid" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="img/alien.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="img/vengadores.jpg" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </div>
                     <div class="col-md-12">
                         <h2 class="titulo">Peliculas en cartelera</h2>
                     </div>
@@ -107,6 +128,40 @@
             </div>
         </div>
     </footer>
+
+    <!-- Modal -->
+  
+  <div class="modal" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Ingresa usuario y contraseña</h4>
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+        </div>
+  
+        <!-- Modal body -->
+        <div class="modal-body">
+          <div class="form-group">
+              <label for="username">usuario</label>
+              <input class="form-control" type="text" name="username" id="username" placeholder="ejemplo@usuario.com">
+          </div>
+          <div class="form-group">
+            <label for="password">contraseña</label>
+            <input class="form-control" type="password" name="password" id="password">
+        </div>
+        </div>
+  
+        <!-- Modal footer -->
+        <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+          <button type="button" class="btn btn-success" data-dismiss="modal" id="boton-ingresar">Ingresar</button>
+        </div>
+
+  
+      </div>
+    </div>
+  </div>
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/funcionalidad.js"></script>
